Fix card spacing on site search page

--- a/src/styles/search-site.scss
+++ b/src/styles/search-site.scss
@@ -13,6 +13,10 @@
 @include media.on-larger-than-tiny {
   .tna-card {
     &--horizontal {
+      &:not(:has(.tna-card__image-container)) {
+        padding-top: 0;
+      }
+
       > :first-child {
         padding-top: spacing.space(1);
       }
